--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ set(SOURCES
 	src/model.cpp
 	src/mesh.cpp
 	src/shader.cpp
+	src/material.cpp
 	src/stb_image.c)
 
 add_executable(main main.cpp ${SOURCES})
