--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set(SOURCES
 	src/mesh.cpp
 	src/shader.cpp
 	src/material.cpp
+	src/car.cpp
 	src/stb_image.c)
 
 add_executable(main main.cpp ${SOURCES})
