--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ set(SOURCES
 	src/shader.cpp
 	src/material.cpp
 	src/car.cpp
+	src/scenario.cpp
 	src/stb_image.c)
 
 add_executable(main main.cpp ${SOURCES})
